# grid-reliance

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: api.yml  data-engineering.yml  generator.yml  inference.yml  lint-dockerfiles.yml  pipeline.yml  ray-worker.yml  release.yml  security-scan.yml
api/: Dockerfile  README.md  data.py  main.py  requirements.txt
api/routers/: correlations.py  forecast.py  scenarios.py
dashboard/: README.md
data-engineering/: Dockerfile  README.md  requirements-spark.txt  requirements.txt
data-engineering/processing/: CONTRACT.md  entsoe_ingest.py  spark-era5-ingest.yaml  spark_era5_ingest.py
data-engineering/scripts/: fetch_entsoe.py  fetch_entsoe_test.py  fetch_era5_nordic.py
docs/: architecture.md  infrastructure-alignment.md
generator/: Dockerfile  README.md  generate.py  requirements.txt
inference/: Dockerfile  README.md  __init__.py  bayesian-grid-model.yaml  requirements.txt  run_inference.py
infrastructure/: README.md
pipeline/: Dockerfile  README.md  __init__.py  requirements.txt
pipeline/dagster/: __init__.py  assets.py  io_managers.py  jobs.py  repository.py  resources.py  schedules.py
pipeline/model/: __init__.py  diagnostics.py  feature_engineering.py  hsgp_model.py  mlflow_utils.py
pipeline/notebooks/: hsgp_model_dev.ipynb  system_overview.ipynb
ray-worker/: Dockerfile  requirements-worker.txt
scripts/: upload_to_minio.py
tests/: conftest.py  test_api.py  test_hsgp_model.py
(+3 files in other folders)
